# Agent_and_Tools

./: README.md  huggingMain.py  main.py  pyproject.toml
RecommedationSystem/: generateFakeData.py  testing.py
flaskApp/: app.py
flaskApp/templates/: index.html
frontEnd/: chatBot.py
knowledge_base/: chroma.sqlite3
tools/: api_tool.py  rag_tool.py
tools/huggingFace/: rag_tool.py
